# Cap-s-analysis

./: .gitignore  20251007_lanolin_longstore_vs_fresh_pipeline.py  20251007_lanolin_pipeline_summary.md  AGENTS.md  ANALYSIS_METHOD.md  CHANGELOG.md  CLAUDE.md  IMPROVEMENTS.md  MACOS_GUI_FIXES.md  MIGRATION_RULES.md  README.md  interactive_analyzer_gui.py  preprocess_data.py  raw_data_viewer_gui.py
.claude/: settings.json
Python version/: main.py  requirements-gui.txt  setup_macos_gui_env.sh  tk_macos_smoke_test.py
Python version/skin_analysis/: __init__.py  analysis.py  config.py  exclusions.py  filesystem.py  gui.py  launcher.py  metadata.py  models.py  plotting.py  statistics.py
Python version/tests/: test_analysis.py  test_exclusions.py  test_metadata.py  test_plotting.py  test_statistics.py
archive/: MACOS_GUI_FIXES.md
desktop-tauri/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
desktop-tauri/scripts/: build-macos.mjs  prepare-build-deps.mjs  sync-plotly-vendor.mjs  vendor-cargo-deps.mjs
desktop-tauri/src/: App.svelte  (+1 more)
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/capabilities/: default.json
desktop-tauri/src-tauri/icons/: icon.icns
desktop-tauri/src-tauri/src/: analysis.rs  commands.rs  config.rs  exclusions.rs  filesystem.rs  lib.rs  metadata.rs  models.rs  plotting.rs  statistics.rs
desktop-tauri/src-tauri/tests/: parity_cases.rs
main_alalysis_old/: alalysis.py  setup_macos_gui_env.sh
shared/: parity_cases.json
tauri-app/: README.md  index.html  package-lock.json  package.json
(+26 files in other folders)
